Made some changes to make page dynamic

--- a/index.html
+++ b/index.html
@@ -50,10 +50,15 @@
         </div>
       </div>
       <div class="article-share">
-        <p>Share</p>
-        <img src="images/icon-facebook.svg" alt="icon-facebook" />
-        <img src="images/icon-twitter.svg" alt="icon-twitter" />
-        <img src="images/icon-pinterest.svg" alt="icon-pinterest" />
+        <div class="article-share-text">
+          <p>Share</p>
+          <img src="images/icon-facebook.svg" alt="icon-facebook" />
+          <img src="images/icon-twitter.svg" alt="icon-twitter" />
+          <img src="images/icon-pinterest.svg" alt="icon-pinterest" />
+        </div>
+        <button class="article-share-close">
+          <img src="images/icon-share-white.svg" alt="share-icon" />
+        </button>
       </div>
     </div>
     <script src="index.js"></script>
